<resources>
    <string name="app_name">可转债</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="loading">正在加载...</string>
    <string name="main_menu">主菜单</string>
    <string name="menu">菜单</string>
    <string name="board">看板</string>
    <string name="setting">设置</string>
    <string name="select_warehouse">请选择仓库</string>
    <string name="collect_goods">入库</string>
    <string name="on_the_shelf">上架</string>
    <string name="picking">出库</string>
    <string name="review">复核</string>
    <string name="load">装载</string>
    <string name="check">盘点</string>
    <string name="inventory_query">库存查询</string>
    <string name="transfer_library">移库</string>
    <string name="piece_collection">逐件入库</string>
    <string name="bulk_collection">批量入库</string>
    <string name="quick_collection">快速入库</string>
    <string name="ensure">确&#160;&#160;&#160;&#160;&#160;&#160;认</string>
    <string name="input_number">输入数量</string>
    <string name="warehouse_number">入库单号</string>
    <string name="container_number">容器号</string>
    <string name="commodity_barcode">物料条码</string>
    <string name="commodity_name">物料名称</string>
    <string name="commodity_number">物料数量</string>
    <string name="commodity_type">规格型号</string>
    <string name="batch_number">批次号</string>
    <string name="project_number">项目号</string>
    <string name="unit">单位</string>
    <string name="inventory_state">库存状态</string>
    <string name="already_received">已收</string>
    <string name="tobe_collected">待收</string>
    <string name="input_quantity_goods">请输入物料数量</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="enter_receipt_number">请输入入库单号</string>
    <string name="enter_shipment_number">请输入出库单号</string>
    <string name="enter_barcode">请输入物料条码</string>
    <string name="enter_container_number">请输入容器号</string>
    <string name="enter_location_number">请输入库位号</string>
    <string name="enter_task_number">请输入容器号或库位号</string>
    <string name="exit">退出登录</string>
    <string name="upgrade">检测更新</string>
    <string name="version">当前版本</string>
    <string name="recommended_library_position">推荐库位</string>
    <string name="number_of_shelves">上架数量</string>
    <string name="newest_version">当前已经是最新版本</string>
    <string name="edge_picking">边捡边分</string>
    <string name="batch_picking">批量拣货</string>
    <string name="vertical_storage_sorting">分拣出库</string>
    <string name="piece_review">逐件复核</string>
    <string name="batch_review">批量复核</string>
    <string name="new_load">新建装载</string>
    <string name="reload">继续装载</string>
    <string name="file_exist_error">下载的文件已经存在</string>
    <string name="file_version_error">下载的文件版本过低</string>
    <string name="file_info_error">下载的文件信息错误</string>
    <string name="network_error">连接服务器失败</string>
    <string name="progress_download">下载进度</string>
    <string name="commodity_number_was_not_found">没有找到该物料号</string>
    <string name="login_success">登录成功</string>
    <string name="bulk_collection_success">入库成功</string>
    <string name="picking_success">分拣成功</string>
    <string name="onshell_success">上架成功</string>
    <string name="toast_error">没有查到相关信息</string>
    <string name="location">库位号</string>
    <string name="network_exception">网络连接异常</string>
    <string name="download_success">下载完成,请更新应用</string>
    <string name="download_fail">下载失败</string>
    <string name="md5_fail">MD5校验失败</string>
    <string name="enter_number_error">输入数量超过待收数量</string>
    <string name="enter_number">输入数量</string>
    <string name="login_again">请重新登录</string>
    <string name="enter_materailcode_location">请输入物料编码或库位号</string>
    <string name="materialName">物料名称</string>
    <string name="materialCode">物料编码</string>
    <string name="materialClass">物料类别</string>
    <string name="materialSpec">物料规格</string>
    <string name="materialType">物料类型</string>
    <string name="materialUnit">单位</string>
    <string name="materialManager">物料管理</string>
    <string name="bill_number">单据数量</string>
    <string name="already_number">已收数量</string>
    <string name="total">总数</string>
    <string name="number">数量</string>
    <string name="task_numbr">任务锁定数量</string>
    <string name="configure_network">配置网络</string>
    <string name="default_setting">默认配置</string>
    <string name="enter_network">请输入网络地址</string>
    <string name="enter_error_network">网络地址不能为空</string>
    <string name="setting_success">设置成功</string>
    <string name="http_sockettime">服务器通讯超时</string>
    <string name="outgoing_view">出库查看</string>
    <string name="enter_library">请输入库位号</string>
    <string name="outgoing_view_success">出库查看成功</string>
    <string name="transfer_library_success">移库成功</string>
    <string name="enter_source_location">请输入源库位</string>
    <string name="enter_destination_location">请输入目的库位</string>
    <string name="source_location">源库位</string>
    <string name="destination_location">目的库位</string>
    <string name="enter_correct_location">请输入正确的源库位和目的库位</string>
    <string name="vertical_storage_shipment">批量出库</string>
    <string name="replenish_the_warehouse">补充入库</string>
    <string name="replenish_the_warehouse_success">补充入库成功</string>
    <string name="enter_barcode_library">请输入物料条码或库位号</string>
    <string name="shipment_success">出库成功</string>
    <string name="choose_task">选择任务</string>
    <string name="send_task">下达任务</string>
    <string name="complete_task">完成任务</string>
    <string name="local">目前:</string>
    <string name="delete">删除</string>
    <string name="delete_material">是否删除该条物料</string>
    <string name="supple_information">补充信息</string>
    <string name="empty_container_in">空托入库</string>
    <string name="empty_container_out">空托出库</string>
    <string name="enter_correct_empty_container_in">请输入正确的容器号和目的库位</string>
    <string name="enter_correct_empty_container_out">请输入正确的容器号和源库位</string>
    <string name="empty_container_in_success">空托入库成功</string>
    <string name="empty_container_out_success">空托出库成功</string>
    <string name="quantity_commodity_number">物料数量必须大于0</string>
    <string name="volume_of_receipt">入库量</string>
    <string name="delivering_amount">出库量</string>
    <string name="daily_daily_shipments">历史每日出入库量</string>
    <string name="today_receipt_detail">今日入库详情</string>
    <string name="today_deliver_detail">今日出库详情</string>
    <string name="other">其它</string>
    <string name="current_company">当前货主</string>
    <string name="enter_current_company">请选择货主</string>
    <string name="choose_current_company_error">当前没有可选货主</string>
    <string name="picking_desk_return_library">拣选台回库</string>
    <string name="picking_desk_return_library_success">拣选台回库成功</string>
    <string name="already_received_number">已收数量</string>
    <string name="tobe_collected_number">待收数量</string>
    <string name="scan_container">扫描容器</string>
    <string name="no_difference_in_all">全部无差异</string>
    <string name="inventory">库存数量</string>
    <string name="today_task">今日任务</string>
    <string name="today_receipt">今日入库数</string>
    <string name="today_shipment">今日出库数</string>
    <string name="receipt">入库</string>
    <string name="shipment">出库</string>
    <string name="task">任务</string>
    <string name="menu_inventory">库存</string>
    <string name="menu_container">容器</string>
    <string name="menu_location">库位</string>
    <string name="menu_material">物料</string>
    <string name="menu_settings">设置</string>
    <string name="setting_network">设置网络</string>
    <string name="logout">退出网络</string>
    <string name="search_material">查找物料</string>
    <string name="auto_shipment">自动配盘</string>
    <string name="generate_task">生成任务</string>
    <string name="task_id">任务id</string>
    <string name="task_priority">优先级</string>
    <string name="task_type">任务类型</string>
    <string name="task_station">站台</string>
    <string name="task_container">容器编号</string>
    <string name="task_from_location">起始库位</string>
    <string name="task_to_location">目的库位</string>
    <string name="task_status">任务状态</string>
    <string name="task_create">创建时间</string>
    <string name="task_craeted">创建人</string>
    <string name="task_coomplete">完成时间</string>
    <string name="task_completed">操作人</string>
    <string name="combinate_station">出站口</string>
    <string name="current_version">版本号</string>
    <string name="current_warehouse">当前仓库</string>
    <string name="current_user">操作者</string>
    <string name="list_log">日志查看</string>
    <string name="current_logout">退出登录</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_password">请输入用户密码</string>
    <string name="menu_inventory_detail">库存详情</string>
    <string name="material_detail">物料详情</string>
    <string name="preview_lock_number">预定执行数量</string>
    <string name="company_code">货主编码</string>
    <string name="supplier_code">供应商编码</string>
    <string name="weight">重量</string>
    <string name="warehouse_in_time">入库时间</string>
    <string name="update_user">更新用户</string>
    <string name="task_detail">任务详情</string>
    <string name="force_complete">强制完成</string>
    <string name="choose_empty_out">选择空托进行出库</string>
    <string name="no_choose_empty_out">没有找到适合的空托</string>
    <string name="receipt_success">入库成功</string>
    <string name="receipt_no">入库单</string>
    <string name="bulk_shipment">批量出库</string>
    <string name="shipment_bill">出库单</string>
    <string name="shipment_task">出库任务</string>
    <string name="force_complete_success">强制完成任务成功</string>
    <string name="quick_select">快速筛选</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="btn_ensure">确&#160;&#160;&#160;&#160;&#160;&#160;认</string>
    <string name="btn_cancel">取&#160;&#160;&#160;&#160;&#160;&#160;消</string>
    <string name="btn_reset">重&#160;&#160;&#160;&#160;&#160;&#160;置</string>
    <string name="printer">打印</string>
    <string name="printer_list">打印入库表单</string>
    <string name="printer_material">打印物料</string>
    <string name="enter_material_code">请输入物料编码</string>
    <string name="commodity_total_number">物料总数</string>
    <string name="receipt_code">入库单号</string>
    <string name="receipt_type">入库类型</string>
    <string name="receipt_status">入库状态</string>
    <string name="shipment_code">出库单号</string>
    <string name="shipment_type">出库类型</string>
    <string name="shipment_status">状态</string>
    <string name="str_no_serialport">该设备不支持串口</string>
    <string name="str_conn_state_disconnect">连接状态：未连接</string>
    <string name="str_conn_state_connecting">连接状态：连接中</string>
    <string name="str_connecting">连接中</string>
    <string name="str_conn_state_connected">连接状态：已连接</string>
    <string name="str_wifi_ip">请输入IP：</string>
    <string name="str_ip">IP: </string>
    <string name="str_port">Port: </string>
    <string name="str_wifi_port">请输入端口号：</string>
    <string name="str_state_query">状态查询</string>
    <string name="str_mode_change">更换打印模式</string>
    <string name="str_disconnect">断开连接</string>
    <string name="str_label_print">标签打印</string>
    <string name="matrix">标签打印矩阵二维码</string>
    <string name="matrix_tip">支持机型（M320）</string>
    <string name="str_label_print_long_photo">标签打印长图</string>
    <string name="str_photo_description">部分机器不支持该指令，会打印空白</string>
    <string name="str_receipt_print">票据打印</string>
    <string name="str_cpcl_print">面单打印</string>
    <string name="str_bluetooth_connect">蓝牙连接</string>
    <string name="str_usb_connect">USB连接</string>
    <string name="str_wifi_connect">wifi连接</string>
    <string name="str_serialport_connect">串口连接</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_cann_printer">请先连接打印机</string>
    <string name="str_bluetooth">蓝牙</string>
    <string name="str_serialport">串口</string>
    <string name="str_usb">USB</string>
    <string name="str_wifi">WIFI</string>
</resources>