<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/quick_select"
        android:textSize="@dimen/bigFont"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_reset"
                android:textSize="@dimen/bigFont"
                android:background="@drawable/red_button_bg"
                android:layout_gravity="left"/>

            <Button
                android:id="@+id/ensureBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/btn_ensure"
                android:textSize="@dimen/bigFont"
                android:background="@drawable/red_button_bg"
                android:layout_gravity="right"/>

        </FrameLayout>
    </FrameLayout>
</LinearLayout>