<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myNetwork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textIsSelectable="true"
            android:textColor="@color/gray_text"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/networkEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/gray_text"
            android:textColorHint="@color/gray_text"
            android:singleLine="true"
            android:textSize="18sp"
            android:background="@drawable/edit_bg"
            android:hint="@string/enter_network"/>

        <Button
            android:id="@+id/resetDefaultBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/default_setting"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="click"
            android:background="@drawable/red_button_bg"/>

        <Button
            android:id="@+id/setBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="click"
            android:background="@drawable/red_button_bg"/>
    </LinearLayout>
</FrameLayout>