<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@mipmap/login_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="50dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/userEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_text"
            android:singleLine="true"
            android:textSize="18sp"
            android:background="@drawable/edit_bg"
            android:hint="@string/enter_username"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg">
            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_text"
                android:singleLine="true"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:background="@null"
                android:hint="@string/enter_password"/>
            <ImageView
                android:id="@+id/eyeImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="5dp"
                android:src="@mipmap/eye"
                android:layout_gravity="right|center_vertical"/>
        </FrameLayout>
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/red_button_bg"/>
    </LinearLayout>


</FrameLayout>
