<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topLayoutHeight"
        android:background="@color/colorPrimary">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/scanLayoutHeight"
            style="@style/scan_layout_style"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/scanImageSize"
                android:layout_height="@dimen/scanImageSize"
                android:layout_marginLeft="@dimen/smallMargin"
                android:src="@mipmap/search"
                android:layout_gravity="left|center_vertical"/>

            <EditText
                android:id="@+id/inputEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/lineMargin"
                android:layout_marginRight="@dimen/lineMargin"
                android:hint="@string/search_material"
                android:layout_gravity="center_vertical"
                style="@style/scan_edit_style" />

        </FrameLayout>
    </FrameLayout>

    <android.support.percent.PercentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/todayTask"
            app:layout_widthPercent="33.3%"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/commondity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_bg"
                android:textSize="@dimen/bigFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_task"
                android:textColor="@color/black"
                android:textSize="@dimen/smallFont"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/todayReceipt"
            app:layout_widthPercent="33.3%"
            app:layout_marginLeftPercent="33.3%"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_green"
                android:textSize="@dimen/bigFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_receipt"
                android:textColor="@color/black"
                android:textSize="@dimen/smallFont"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/todayShipment"
            app:layout_widthPercent="33.3%"
            app:layout_marginLeftPercent="66.6%"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/shipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="@dimen/bigFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_shipment"
                android:textColor="@color/black"
                android:textSize="@dimen/smallFont"/>
        </LinearLayout>
    </android.support.percent.PercentFrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray_bg"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:background="@color/white">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>