<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/man2"
                android:background="@null"/>
        </LinearLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="70dp"
            android:text="youjie"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/white_right"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"/>

    </FrameLayout>

    <android.support.percent.PercentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <LinearLayout
            app:layout_widthPercent="33.3%"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/commondity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_bg"
                android:textSize="@dimen/bigFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:textColor="@color/black"
                android:textSize="@dimen/normalFont"/>
        </LinearLayout>
        <LinearLayout
            app:layout_widthPercent="33.3%"
            app:layout_marginLeftPercent="33.3%"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_green"
                android:textSize="@dimen/bigFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_receipt"
                android:textColor="@color/black"
                android:textSize="@dimen/normalFont"/>
        </LinearLayout>
        <LinearLayout
            app:layout_widthPercent="33.3%"
            app:layout_marginLeftPercent="66.6%"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/shipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/already_color"
                android:textSize="@dimen/bigFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_shipment"
                android:textColor="@color/black"
                android:textSize="@dimen/normalFont"/>
        </LinearLayout>
    </android.support.percent.PercentFrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <ListView
        android:id="@+id/listContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>